# wasm-minimal-protocol

./: Cargo.toml
examples/host-wasmer/: Cargo.toml
examples/host-wasmer/src/: lib.rs  main.rs  pikchr.wasm
examples/host-wasmtime/src/: main.rs
examples/pyo3-plugin/: Cargo.toml
examples/pyo3-plugin/src/: lib.rs
examples/rust-python-plugin/: Cargo.toml
examples/rust-python-plugin/src/: lib.rs
