[package]
name = "wasm-minimal-protocol"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    ".",
    "examples/hello",
    "examples/host-wasmer",
    "examples/rust-python-plugin",
    "examples/pyo3-plugin",
    "examples/host-wasmtime",
]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.60"
quote = "1.0.28"
venial = "0.5.0"
