[package]
name = "rust-python-plugin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustpython = { git = "https://github.com/RustPython/RustPython", default-features = false, features = ["freeze-stdlib", "stdlib"] }
wasm-minimal-protocol = { path = "../../" }
# rustpython = {git = "http://github.com/rustpython/rustpython.git", features = ["stdlib", "freeze-stdlib"]}
# rustpython_vm = {git = "http://github.com/rustpython/rustpython.git"}